k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  namespace: big-project # รันในห้องที่เราเพิ่งสร้าง
spec:
  replicas: 2 # รันแอปพร้อมกัน 2 ก๊อปปี้
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: mosuthecreator/go-app:v2 # เปลี่ยนเป็น ID ของคุณ
        ports:
        - containerPort: 8080
