k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db  # ชื่อนี้ต้องตรงกับที่ Go App ใช้ต่อ (Host=db)
  namespace: big-project
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: big-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: pgdata # กัน error เรื่องโฟลเดอร์ lost+found ของ PVC
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
